<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Maximilian Salomon.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses/.
  -->

<resources>

   <!-- misc -->
   <string name="app_name">National Geographic for Muzei</string>
   <string name="source_name">National Geographic Photo of the day</string>
   <string name="source_description">The daily photo from the National Geographic Society</string>

   <!-- preferences -->
   <string name="prefs_title">Settings</string>
   <string name="prefs_header_general">General</string>
   <string name="prefs_header_about">About</string>

   <string name="pref_cyclemode_key" translatable="false">pref_cyclemode</string>
   <string name="pref_cyclemode_title">Random photo</string>
   <string name="pref_cyclemode_summary__true">Shows a random photo of the day for a adjustable period of time.</string>
   <string name="pref_cyclemode_summary__false">Shows always the most recent photo of the day.</string>

   <string name="pref_intervalpicker_key" translatable="false">pref_intervalpicker</string>
   <string name="pref_intervalpicker_title">Update interval</string>
   <string name="pref_intervalpicker_defaultvalue" translatable="false">60</string>

   <string name="pref_wifiswitch_key" translatable="false">pref_wifiswitch</string>
   <string name="pref_wifiswitch_title">Only update on Wi-Fi</string>
   <string name="pref_wifiswitch_summary">Updating on Wi-Fi helps to reduce mobile data usage.</string>

   <string name="pref_about_key" translatable="false">pref_about</string>
   <string name="pref_about_summary">
        Version %1$s
        \n© %2$d Maximilian Salomon
   </string>

   <!-- share artwork -->
   <string name="share_artwork_message">My current Android wallpaper is \'%1$s\' - The photo of the day of %2$s on nationalgeographic.com. #Muzei #NationalGeographic\n\n%3$s</string>
   <string name="share_artwork_title">Share this photo</string>
   <string name="share_artwork_nothing_to_share">No photo to share.</string>

   <!-- photo description -->
   <string name="photo_desc_title"><![CDATA[About <b>%1$s</b>]]></string>
   <string name="photo_desc_open">About this photo</string>
   <string name="photo_desc_nothing_to_show">No photo description available. - Please try again.</string>

   <!-- reload -->
   <string name="photo_reload">Reload photo of the day</string>

</resources>
